refact: code changed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="btn-translate">Translate to Minion</button>
         <h3>Your tanslation will come here</h3>
 
-        <div id="text-output">Hello</div>
+        <div id="text-output"></div>
 
     </main>
         
